# nao-manga-rls

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  auto-split-no-title.py  auto-split.py  manual-split-no-title.py  manual-split-regex-no-title.py  manual-split-regex.py  manual-split.py  merge-chapters.py  multi-merge-spreads.py  orchestrator.jsonschema  prepare-release-no-title.py  prepare-release.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
_templates/: README.md
_templates/K MANGA/: _batch_rename.py  _batch_rename_no_title.py  _batch_step_1.py  _batch_step_2.py
_templates/Manga UP!/: _batch_rename.py  _batch_rename_no_title.py  _batch_step_2.py  _batch_step_3.py
_templates/Manga UP! (Denoise)/: PhotoshopBatching.xml  _batch_denoise.vpy  _batch_rename.py  _batch_rename_no_title.py  _batch_step_0.py  _batch_step_1.py  _batch_step_2.py  _chapters_name.txt  _spreads_data.txt
_templates/Square Enix/: unfuck_edge.py  unfuck_edge.vpy  unfuck_sqenix.vpy
_templates/Upscale/: make_dirs.py  pp_color.vpy  pp_halftones.vpy  pp_squash.py  upscale_common.py
ci/: multilint.py
nmanga/: __init__.py  _metadata.py  _ntypes.py  autolevel.py  cmd.py  common.py  config.py  constants.py  denoiser.py  epub_merge.py  epub_render.py  exporter.py  file_handler.py  formatter.py  lazy.py  ogsov.py  orchestrator.py  pdfs.py  renamer.py  resizer.py  spreads.py  term.py  timewizard.py  utils.py  vapour.py  winml.py
nmanga/cli/: _deco.py  archive.py  auto_split.py  autolevel.py  base.py  color_level.py  common.py  config.py  constants.py  debugging.py  denoiser.py  epub_stuff.py  extractor.py  image_operations.py  image_optimizer.py  image_tagging.py  join_spreads.py  lookup.py  manual_split.py  merge_chapters.py  options.py  orchestrator.py  pdf_stuff.py  pdfs.py  posterize.py  releases.py  renamer.py  rescaler.py  spreads_manager.py  timewizard.py  upscaler.py
nmanga/orchestrator/: __init__.py  common.py  dsl.py  models.py  rules.py
nmanga/orchestrator/actions/: __init__.py  _base.py  colors.py  denoise.py  leveling.py  ml.py  optimize.py  others.py  pack.py  posterize.py  renamer.py  rescale.py  spreads.py  tagging.py  utils.py
nmanga/templates/: epub.py
nmanga/term/: __init__.py  logger.py  progress.py  shell.py
samples/: kekkaisensen_omni.json  kimishinu.json  kimishinu_png4.json
tests/: test_cli_common.py  test_common.py  test_epub_render.py  test_regex.py  test_utils.py
tools/: generate-schema.py
