[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmanga"
description = "A collection of CLI function to process a manga releases."
readme = "README.md"
dynamic = ["version"]
license = {text = "MIT"}
requires-python = ">=3.13,<3.15"
authors = [{name = "noaione", email = "noaione@n4o.xyz"}]
keywords = ["manga", "colorlevel", "spreads", "auto-splitting", "processing", "cbz", "comic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "rich==15.0.0",
    "inquirer==3.4.1",
    "click==8.4.2",
    "ftfy==6.3.1",
    "pydantic==2.13.4",
    "typing-extensions==4.15.0",
    "Pillow==12.2.0",
    "lxml==6.1.1",
    "unrar2-cffi==0.5.0",
    "py7zr==1.1.3",
    "defusedxml==0.7.1",
    "rich-click==1.9.8",
    "cykooz.resizer[pillow]@git+https://github.com/Cykooz/cykooz.resizer.git#19dcea501f538146806764de28accda63b6a7a63",
    "wand==0.7.2",
    "click-pwsh==0.9.7",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.20",
]
autostuff = [
    "numpy>=2.4.6",
    "scipy>=1.18.0",
]
denoiser = [
    "numpy>=2.4.6",
    "onnx>=1.22.0",
    "onnxruntime-ep-nv-tensorrt-rtx-cu13==0.3.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "onnxruntime-gpu==1.27.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "tensorrt-cu13==11.1.0.106; sys_platform == 'linux' or sys_platform == 'win32'",
    "torch>=2.12.1; sys_platform == 'linux' or sys_platform == 'win32'",
    "einops>=0.8.2",
    "resselt>=1.4.1",
    "winrt-runtime>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-applicationmodel>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-foundation>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-foundation-collections>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-management-deployment>=3.2.1; sys_platform == 'win32'",
    "winrt-windows-system>=3.2.1; sys_platform == 'win32'",
]
vapoursynth = [
    "vapoursynth==77"
]

[tool.setuptools.dynamic]
version = {attr = "nmanga._metadata.__version__"}

[project.urls]
"Bug Reports" = "https://github.com/noaione/nao-manga-rls/issues"
"Source" = "https://github.com/noaione/nao-manga-rls"

[project.scripts]
nmanga = "nmanga.cmd:main"

[tool.setuptools]
packages = ["nmanga", "nmanga.cli", "nmanga.term", "nmanga.templates", "nmanga.orchestrator", "nmanga.orchestrator.actions"]

[tool.uv]
override-dependencies = ["onnxruntime-windowsml; sys_platform == 'never'"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.ruff]
line-length = 120
extend-exclude = [
    "env",
    "venv",
    ".pytest_cache",
    ".venv",
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".vscode",
    ".ruff_cache",
    "**/Lib/**",
    "dist",
    "build",
    "_templates",
    "tools",
]
target-version = "py310"
src = ["nmanga", "tests", "ci"]

[tool.ruff.format]
preview = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "S",
    "B",
    "T",
    "Q",
    "D",
    "RUF",
    "COM",
    "PTH",
    "ASYNC"
]
ignore = [
    "E203",
    "F405",
    "F403",
    "F722",
    "N806",
    "COM812",
    "D400",  # first line should be period, most of my docstring will be LICENSE header so no thanks
    "D202",
    "D401",
    "CPY",
]
preview = true
extend-ignore = ["D", "S603", "S404", "T201"] # D -> Docstring missing for public function or method

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.isort]
combine-as-imports = false
split-on-trailing-comma = true
required-imports = ["from __future__ import annotations"]
known-first-party = ["tests", "nmanga"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "I002", "D205"]
"tests/*.py" = ["S101", "I002", "D"]  # assert statement used in pytest
"pipelines/*" = ["T", "I", "S603", "D"]
"tools/*.py" = ["D100", "T201", "I002"]

[tool.pyright]
exclude = [
    ".vscode/*",
    "tests/*",
    "_templates/**/*",
    "build/**/*",
    "dist",
    ".venv",
    "venv",
    "env",
    "**/Lib/**",
    "**/node_modules/**",
    "**/__pycache__",
    "**/.*"
]
